--- a/src/system/Admin/style/navtabs.css
+++ b/src/system/Admin/style/navtabs.css
@@ -10,10 +10,10 @@ ul#admintabs {
 }
 
 ul#admintabs li {
-    background-color:#F3F3F3;
+    background:none repeat scroll 0 0 #F3F3F3 !important;
     border:1px solid #CCCCCC;
     float:left;
-    list-style-type:none;
+    list-style:none;
     margin:0 5px 0 0;
     padding:0;
     z-index:1000;
@@ -26,14 +26,14 @@ ul#admintabs li > a {
     font-weight:bold;
     padding:5px;
     position:relative;
-    text-decoration:none;
+    text-decoration:none !important;
 }
 
 ul#admintabs li > a:hover {
     background:#FFFFFF !important;
     border-right:1px solid #ccc;
     color:#000;
-    text-decoration:none;
+    text-decoration:none !important;
 }
 
 ul#admintabs li.active {
@@ -139,17 +139,18 @@ ul#admintabs #ajaxNewCatForm a.ajaxCatImage img {
 }
 
 #control_contextmenu ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+    list-style: none !important;
+    padding: 0 !important;
+    margin: 0 !important;
     cursor: pointer;
 }
 
 #control_contextmenu ul li {
+    list-style: none !important;
     font-size: 0.9em;
     text-align: left;
-    padding: 2px 10px 2px 10px;
-    margin: 0;
+    padding: 2px 10px 2px 10px !important;
+    margin: 0 !important;
     cursor: pointer;
     text-decoration: none;
     color: #333;
