--- a/src/system/Blocks/style/style.css
+++ b/src/system/Blocks/style/style.css
@@ -5,9 +5,10 @@ div.z-formrow ul.blocks-modulefilter-splitlist {
 }
 
 div.z-formrow ul.blocks-modulefilter-splitlist li {
+    background: none !important;
     width: 30%;
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
     line-height: 15px;
     float: left;
 }
