--- a/src/system/Theme/style/style.css
+++ b/src/system/Theme/style/style.css
@@ -61,6 +61,11 @@ img.theme_colorpicker_image {
     min-width: 208px;
     width: 30%;
     overflow: hidden;
+    color: #333;
+}
+
+#themes_list dl.theme_item a {
+    color: #333;
 }
 
 #themes_list dl.theme_item:hover {
